# pkasso

./: .dockerignore  .gitignore  LICENSE.md  README.md  autoprot.py  batch_run_autoprot.py  environment.yml  pyproject.toml  run_autoprot.py  setup.py
.github/workflows/: build_api.yml  linting.yml  publish-pypi.yml  python-app.yml  tests.yml  typing.yml
autoprot/: __init__.py  cli.py  coupling.py  main.py  postprocess.py  predict_pka.py  py_interface.py  special_cases.py  tautomers.py  transition_matrix.py  transitions.py  utils.py
docker/: Dockerfile  README.md  build.sh  load.sh  nvidia_support_readme.md  run.sh  save.sh
example/: autoprot_summary.csv  example.ipynb  example_molecules.smi  test_macro_pkas.out  test_mols_scan.sdf
pkasso/: __init__.py  cli.py  coupling.py  main.py  postprocess.py  predict_pka.py  py_interface.py  special_cases.py  tautomers.py  transitions.py  utils.py
pkasso/api/: __init__.py  app.py  chemistry.py  config.py  feedback.py  render.py  state.py  web.py
pkasso/api/static/: app.css  app.js  styles.css  tailwind_output.css
pkasso/api/templates/: page.html
tests/: test_api_proxy.py  test_cli.py  test_coupling.py  test_main.py  test_tautomers.py  test_transition_matrix.py
