[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoprot"
version = "0.3.0"
description = "Prediction of protonation states for small molecules"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Soeren von Buelow", email = "soeren.buelow@bindresearch.org" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "rdkit",
    "numpy",
    "scipy",
    "pyyaml",
    "cairosvg",
    "svgutils",
    "matplotlib",
    "torch",
    "torch-geometric",
    "pandas",
    "tqdm",
    "click",
    "networkx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
autoprot = "autoprot.cli:run_cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"autoprot" = ["data/*.csv", "data/*.pth", "data/*.tsv"]

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F"]
