[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkasso"
version = "0.4.1"
description = "Prediction of protonation states for small molecules"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Bind Research", email = "soeren.buelow@bindresearch.org" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "rdkit>=2026.03.02",
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "pyyaml>=6,<7",
    "cairosvg>=2.7,<3",
    "svgutils>=0.3,<1",
    "matplotlib>=3.8,<4",
    "torch>=2.2,<3",
    "torch-geometric>=2.5,<3",
    "pandas>=2.1,<3",
    "tqdm>=4.66,<5",
    "click>=8.1,<9",
    "networkx>=3.1,<4",
    "ipython>=8.39,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
    "pytest-cov>=4,<8",
    "mypy>=1.10,<2",
    "ruff>=0.4,<1",
]

[project.scripts]
pkasso = "pkasso.cli:run_cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"pkasso" = ["data/*.csv", "data/*.pth", "data/*.tsv"]

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F"]
